
2017-06-16  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* Makefile.am: added CODE_COVERAGE parts as provided by AX_CODE_COVERAGE
	* cobcrun.c: don't print runtime env when program name > max length,
	  surrounded exception ABORTs that cannot be tested by LCOV_EXCP markers

2017-01-10  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* cobcrun.c: Copyright year 2017

2016-08-20  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* cobcrun.c: fixed missing cob_stop_run() for --print-runtime-conf,
	  apply possible configuration files given on the command line before
	  and allow to use it together with starting a program

2016-08-10  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* cobcrun.c: added option --brief (-q) to remove the path to cobcrun
	  in argv[0]

2016-06-29  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org> 

	* cobcrun.c (cobcrun_initial_module) [_WIN32]: fixed setting of
	  COB_PRE_LOAD and COB_LIBRARY_PATH to use PATHSEP_CHAR

2016-06-21  Brian Tiffin <btiffin@gnu.org>

	* cobcrun.c : replaced cob_strdup. Need to revisit.

2016-05-16  Brian Tiffin <btiffin@gnu.org>

	* cobcrun.c : replaced non-portable strndup, and fixed free with cob_free

2016-05-15  Brian Tiffin <btiffin@gnu.org>

	* cobcrun.c : Added -M path/module command line option
	  if path/ found, prepend to COB_LIBRARY_PATH
	  if module (no slash) found, prepend to COB_PRE_LOAD
	  may set both.

2016-01-30  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org> 

	* cobcrun.c (cobcrun_print_version): changed generation of build stamp

2015-03-06  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org> 

	* cobcrun.c : new option --config=<file> / -c <file> for setting the
	  runtime configuration file to be loaded during initialisation

2014-08-25  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org> 

	* cobcrun.c : Changed output of --help for help2man
	* Makefile.am : Added manpage generation + install
